bin_PROGRAMS = csv2bin keygen repsvr


csv2bin_SOURCES = csv2bin_main.cpp FileDesc.cpp DronePlotDB.cpp strfuncts.cpp

keygen_SOURCES = keygen_main.cpp FileDesc.cpp strfuncts.cpp

repsvr_SOURCES = repsvr_main.cpp FileDesc.cpp DronePlotDB.cpp QueueMgr.cpp ReplServer.cpp strfuncts.cpp AntennaSim.cpp Server.cpp TCPServer.cpp TCPConn.cpp LogMgr.cpp ALMgr.cpp
repsvr_LDFLAGS=-pthread
